<resources>
    <string name="app_name">EzBook</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_like">Favourite</string>
    <string name="title_msg">Message</string>
    <string name="title_profile">Profile</string>
    //for login
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">EzBook</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="nss">HKDSE</string>
    <string name="title_activity_add_post">AddPostActivity</string>
    <string name="addPostAddImageBtn">Add Photo</string>
    <string name="addPostDetail">Item Details</string>
    <string name="addPostBookName">Book Name</string>
    <string name="addPostPrice">Price</string>
    <string name="addPostHKPrice">HKD $</string>
    <string name="addPostDesc">Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_selection_list_activty">Chosee Your Choice</string>

    <string name="no_contact">No Contacts</string>
    <string name="no_book">No Books Available</string>
</resources>
