<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_msg"
        android:icon="@drawable/ic_sms_black_24dp"
        android:title="@string/title_msg" />
    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_like" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile" />

</menu>
