<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textViewNss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/border"
                    android:padding="20dp"
                    android:text="@string/nss"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvNssSubjects"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/textViewNss"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/secondaySchool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/rvNssSubjects"
                    android:background="@drawable/border"
                    android:padding="20dp"
                    android:text="@string/secondary"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvSecondarySubjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/secondaySchool"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/primarySchool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rvSecondarySubjects"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:padding="20dp"
                    android:background="@drawable/border"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/primary"
                    android:textStyle="bold"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPrimarySubjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/primarySchool"
                    android:layout_alignParentStart="true" />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>